# home-automation

./: LICENSE  all-crypto.py  bandwidth.py  cameras-mqtt.py  crypto-prices.py  nicehash.py  pyproject.toml  shrimpy.py  water-level.py  weather-forecast.py  weather-scraper.py
grafana/: cistern-level.json  dashboard-main.json
